Fix nav-search on narrow screen

--- a/public/css/chef-browser.css
+++ b/public/css/chef-browser.css
@@ -13,11 +13,16 @@
 
 /* copy of col-sm-4, without float:left */
 #nav-search {
-    width: 33%;
     position: relative;
     min-height: 1px;
     padding-right: 15px;
     padding-left: 15px;
+}
+
+@media (min-width: 768px) {
+    #nav-search {
+        width: 33.33333333333333%;
+    }
 }
 
 footer {
